testsuite/tests/rename/should_compile/T5306b.hs
{-# LANGUAGE TypeFamilies #-}
module T5306b where

data family F a
data instance F Int = FInt
